@@ -1,3 +1,12 @@
+2007-01-15  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixcore/webservice/jsonws/JSONWSProcessor.java: measure
+	invocation time for method calls failing with exception too
+	* projects/webservice/htdocs/data-pfxsoap.js: fix IE7 problem (wrong
+	callback arguments)
+	* projects/webservice/htdocs/calltest-pfxsoap.js: improved accuracy of
+	invocation time measurement for asynchronous calls
+
 2007-01-12  Martin Leidig  <mleidig@schlund.de>
 
 	Refactored and added some new capabilities:
